Update user login response model and fix various issues
- Added `User` and `UserLoginResponseModel` classes to handle user data more effectively.
- Updated `LoginCubit` to use `UserLoginResponseModel` instead of `LoginModel`.
- Corrected the translation for "walkplan" in Arabic and English.
- Fixed null safety issues in `LoginCubit` and `LoginSuccessState`.
- Cleaned up formatting and unnecessary whitespace in multiple files.
- Added missing `CustomTextFormFeild` in `submit_health_record_view.dart`.
- Ensured consistent formatting and removed redundant code.

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -86,7 +86,7 @@
   "Media": "الوسائط",
   "birthDay": "تاريخ الميلاد",
   "tall": "الطول",
-  "walkplan": "خطة المشي",
+  "walkplan": "معدل المشي اليومي",
   "bmi": "مؤشر كتلة الجسم",
   "weight": "الوزن",
   "blodtype": "فصيلة الدم",
