--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -83,6 +83,7 @@
   "startDate": "تاريخ البدء",
   "endDate": "تاريخ الانتهاء",
   "SelectDocotor": "اختر الطبيب",
+  "SelectContact": "اختر جهة الاتصال",
   "Media": "الوسائط",
   "birthDay": "تاريخ الميلاد",
   "tall": "الطول",
