--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,6 +3,7 @@
   "doctor": "Doctor",
   "patient": "Patient",
   "family": "Family",
+  "SelectContact" : "Select Contact",
   "password": "Password",
   "name": "Name",
   "walkplan":"Daily Walking Rate",
